# Diffie-Hellman-IKE

./: .gitignore  CAHNGELOG.org  README.md  meson.build  meson_options.txt  modp_primes.json
doc/: doc.tex  references.bib
doc/UML/: Classes.drawio
doc/img/UML/: ClassInteraction.drawio  Classes.drawio  ~$ClassInteraction.drawio.bkp  ~$ClassInteraction.drawio.dtmp  ~$Classes.drawio.bkp  ~$Classes.drawio.dtmp
include/: crypto_utility.h  messagebuilder.h  pipe.h  pipe.hpp  session.h  session.hpp  tls_client.h  tls_handshake_agent.h  tls_observer.h  tls_observer.hpp  tls_server.h  tls_util.h  utility.h
src/: Message.proto  client.cpp  main.cpp  server.cpp  tls_client.cpp  tls_server.cpp
src/tls_client/: main.cpp
src/tls_server/: main.cpp
tls_util/: meson.build
tls_util/include/: messagebuilder.h  ping_agent.h  pipe.h  session.h  tls_handshake_agent.h  tls_observer.h  utility.h
tls_util/src/: Message.proto  ping_agent.cpp  pipe.cpp  session.cpp  tls_handshake_agent.cpp  utility.cpp
